@@ -243,7 +243,7 @@ if [ ${MPI_BACKENDS} == 1 ]; then
 
   ### Run back-ends on their assigned resources
   echo "[`basename $0`] Running back-ends..."
-  echo "> srun -m arbitrary -n ${MRNAPP_NUM_BE} ${BACKEND} ${BACKEND_ARGS}"
+  echo "> srun -n ${MRNAPP_NUM_BE} ${BACKEND} ${BACKEND_ARGS}"
   time srun -n ${MRNAPP_NUM_BE} ${BACKEND} ${BACKEND_ARGS}
 fi
 
