@@ -1,4 +1,6 @@
 [+ added, - removed, * changed ]
+   * (30/Nov/2011) Fixed bug announcing the registered streams to the back-ends
+   * (30/Nov/2011) Fixed bug in the topology generation in the mrnrun script
    * (22/Nov/2011) Added Init routines both in the FE and BE API's that read parameters from environment variables
    * (22/Nov/2011) Improved script 'mrnrun'
    + (14/Nov/2011) New scripts mrnrun (launch apps) and sourceme.sh (set environment) 
